# auralis-ml-stream-vibe-engine

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_messages.jsonl
scripts/: render_audio.py
src/auralis_ml/: __init__.py  config.py  engine.py  models.py
src/auralis_ml/api/: app.py
src/auralis_ml/audio/: features.py  ffmpeg.py  policy.py
src/auralis_ml/chat/: buffer.py  ingestors.py
src/auralis_ml/nlp/: sentiment.py
tests/: test_api.py  test_policy_ffmpeg.py  test_sentiment.py
